--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <aside id="task-details" class="hide">
             <h3></h3>
             <p></p>
-            <a href="#">Editer cette tâche</a>
+            <a href="#" id="edit-button">Editer cette tâche</a>
         </aside>
 
         <nav>
